# 2D_DFT_ML

./: .gitignore  README.md  config.py  example.ipynb  main.py  pyproject.toml  pytest.ini
examples/: learn_plat.py  min_sediments.py  plat_learning.py  sin_learning.py
examples/comps/: comp_phi.py  comp_shuffle.py  compare_different_Nn.py  compare_different_Nn_mixed.py  compare_different_bs.py  compare_different_bs_lr_normalized.py  compare_different_lr_changes.py  compare_different_lr_changes_small_intervall.py  compare_different_lrs.py  compare_different_lrs_mixed.py  compare_different_models.py  compare_different_models_mixed.py  compare_model_time.py  compare_variation.py
examples/smooth/: train_smoothed_sphere_Nn8.py
examples/trains/: final_ba_train.py  learn_ha.py  train_FMT_N2.py  train_N16.py  train_N16_1c_sphere.py  train_N16_1c_sphere_mixed.py  train_N16_sphere.py  train_N16_sphere_mixed.py  train_N4_sphere.py  train_N6_sphere.py  train_N6_sphere_mixed.py  train_N8.py  train_N8_shere.py  train_box.py  train_mixed.py  train_plats.py
src/: comp_mlts.py  create_df.py  fmt.py  reservoir_utils.py
src/training/: __init__.py  _bench.py  _demo.py  _dl.py  _gr.py  _iter_folders.py  _minimize.py  _model_utils.py  _plotting.py  _pot.py  _simfolder_utils.py  _storing.py  _training.py
src/training/models/: _Bay.py  _FMT.py  _FMT2.py  __init__.py  _baseclass.py  _layers.py
tests/: .coveragerc  conftest.py  test___init__.py  test__bench.py  test__demo.py  test__dl.py  test__gr.py  test__train.py
tests/data/: potential_1.json
