[project]
name = "ml-dft-2d-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-order>=1.3.0",
    "pytest-timer>=1.0.0",
    "scipy>=1.15.1",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torch-tb-profiler>=0.4.3",
]
